@@ -17,8 +17,6 @@
 - bugfix: gnome.libgnome_module_info_get() removed in new gnome-python
 - examine drag/drop undo/redo crashes
 - bugfix: hide any open dialogs when locking file (for autolock)
-- bugfix: workaround for amd64 gconf callback id overflow
-
 
 0.5.x:
 - ensure complete UTF-8 support
